Refactor de métodos deprecados Java 17