@@ -245,12 +245,12 @@ public class HabilidadeValor implements HabilidadeValorJogavel {
 	
 	@Override
 	public Double getValorAsDouble() {
-		return new Double(getValor());
+		return Double.valueOf(getValor());
 	}
 
 	@Override
 	public Double getValorNAsDouble() {
-		return new Double(getValorN());
+		return Double.valueOf(getValorN());
 	}
 
 	@Override
